# working-AI-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  main.py  pyproject.toml  railway.toml  test_agent.py  test_classify.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/import/: kapwa-os.zip.b64
.github/workflows/: ci.yml  import-source.yml
apps/agent-api/: pyproject.toml
apps/agent-api/src/agent_api/: deps.py  main.py
apps/agent-api/src/agent_api/routes/: approvals.py  chat.py  settings.py  state.py
apps/dashboard/: .env.example  index.html  package.json  tailwind.config.js
apps/dashboard/src/: App.tsx  vite-env.d.ts
apps/dashboard/src/lib/: api.ts
apps/dashboard/src/pages/: AgentChat.tsx  Dashboard.tsx  Settings.tsx
docs/: ARCHITECTURE.md
supabase/: seed.sql
supabase/migrations/: 20260709000000_create_guests.sql  20260709000001_create_reservations.sql  20260709000002_create_rooms.sql  20260709000003_create_staff.sql  20260709000004_create_tasks.sql  20260709000005_create_inventory.sql  20260709000006_create_audit_log.sql  20260709000007_create_approvals.sql  20260709000008_create_policies.sql
test-ui/: index.html
