[project]
name = "agent-api"
version = "0.1.0"
description = "FastAPI server for KAPWA Resort Agent"
requires-python = ">=3.12"
dependencies = [
    "agent-core",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_api"]
